# monarch-project-template

./: CONTRIBUTING.md  CONTRIBUTORS.md  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: CONTRIBUTING.md  README.md  pyproject.toml  tox.ini
{{cookiecutter.project_name}}/.github/workflows/: deploy-docs.yml  pypi-publish.yml  qc.yml
{{cookiecutter.project_name}}/docs/: conf.py  index.rst
{{cookiecutter.project_name}}/licenses/: BSD-3  MIT
{{cookiecutter.project_name}}/src/{{cookiecutter.__project_slug}}/: __init__.py  cli.py  {{cookiecutter.file_name}}.py
{{cookiecutter.project_name}}/tests/: demo_test.py
